--- a/web/templates/site/site.html
+++ b/web/templates/site/site.html
@@ -244,7 +244,7 @@
           <div class="col-lg-4">
             <div class="mb-3">
               <label class="form-label required">开启浏览器仿真 <span class="form-help"
-                  title="开启后站点签到、数据统计可以兼容更多站点，但获取数据耗时会大幅增加；需要拉取含浏览器内核的镜像才能使用" data-bs-toggle="tooltip">?</span></label>
+                  title="开启后站点签到、数据统计、刷流可以兼容更多站点，但获取数据耗时会大幅增加；需要拉取含浏览器内核的镜像才能使用" data-bs-toggle="tooltip">?</span></label>
               <select class="form-select" id="site_chrome">
                 {% if ChromeOk %}
                 <option value="Y">是</option>
